--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -432,14 +432,14 @@
 
     <img src="images/timer-icon.png" style="position:absolute; left:400px;" width="60">
     <label>Pilih waktu timer setiap soal:</label><br>
-    <select id="waktu" style="width:150px" onchange="pilihan()">
-        <option>Tidak ada</option>
-        <option>5 detik</option>
-        <option>10 detik</option>
-        <option>15 detik</option>
-        <option>30 detik</option>
-        <option>1 menit</option>
-        <option>Kustom</option>
+    <select id="waktu" style="width:150px" onchange="pilihan();clearInterval(myInterval);">
+        <option value="0">Tidak ada</option>
+        <option value="5">5 detik</option>
+        <option value="10">10 detik</option>
+        <option value="15">15 detik</option>
+        <option value="30">30 detik</option>
+        <option value="60">1 menit</option>
+        <option value="10">Kustom</option>
     </select>
     <br><br>
 
@@ -478,9 +478,12 @@
     <h2 class="heading">Pertanyaan</h2>
     <!-- <p id="soal">Hasil dari 2 + 3 adalah ...</p> -->
     <!-- <p>Pilih pertanyaan</p> -->
-    <p id="soal" style="width:500px; word-wrap:break-word;">Belum ada soal</p>
-    <button class="button" onclick="buat();pilihan()">Buat soal baru</button>
-    <p id="soal2"></p>
+    <!-- <p id="soal" style="width:500px; word-wrap:break-word;">Belum ada soal</p> -->
+    <span id="soal" style="width:500px; word-wrap:break-word;">Belum ada soal</span>
+    <div id="timer" style="position:absolute; left:500px;"></div><br><br>
+    <!-- <div class="column" style="padding-right:50px;"></div> -->
+    <button class="button" onclick="buat();pilihan();clearInterval(myInterval);">Buat soal baru</button><br><br>
+    <!-- <p id="soal2"></p> -->
     <!-- <br><br> -->
     <!-- <p>Input angka</p> -->
     <!-- <input type="number" id="angka" min="0"> -->
@@ -497,7 +500,7 @@
 
     <br><br>
     <!-- <p>Terakhir diupdate: 2 Feb 2024</p> -->
-    <p>Terakhir diupdate: 4 Nov 2024</p>
+    <p>Terakhir diupdate: 6 Nov 2024</p>
 
     <script>
         // Time
@@ -711,6 +714,34 @@
             var j_pilihan = document.getElementById("jumlah-pilihan");
             var j_pilihan2 = parseInt(j_pilihan.options[j_pilihan.selectedIndex].innerHTML);
             // console.log(j_pilihan2)
+
+            var waktu_timer = parseInt(document.getElementById("waktu").value);
+            console.log(waktu_timer);
+
+            d2 = new Date();
+            time2 = d2.getTime();
+            interval = 200;
+
+            if (waktu_timer == 0) {
+                document.getElementById('timer').style.display = 'none';
+            } else {
+                document.getElementById('timer').style.display = 'block';
+            }
+
+            // myInterval = "";
+            // var myInterval;
+            // clearInterval(myInterval);
+            myInterval = setInterval(function() {
+                d3 = new Date();
+                time3 = d3.getTime();
+                var waktu_timer = parseInt(document.getElementById("waktu").value);
+                // console.log(time2,time3,waktu_timer);
+                waktu2 = parseInt(Math.max(0,(time2-time3)/1000+waktu_timer+1))
+                document.getElementById('timer').innerHTML = `${waktu2} detik`;
+                if (waktu_timer > 0 & waktu2 == 0) {
+                    document.getElementById('tipe2').style.display = 'none';
+                }
+            }, interval);
 
             function shuffleArray(array) {
                 for (let i = array.length - 1; i >= 0; i--) {
