--- a/projects.html
+++ b/projects.html
@@ -84,12 +84,14 @@
         <div class="container2">
             <img src="images/2d-shapes.png" width="250">
             <div class="clearfix"></div>
-            <p>Ada program bangun datar, cuma bukan Streamlit.<br>Nanti akan mencoba untuk menambahkan bangun ruang di websitenya.</p>
+            <!-- <p>Ada program bangun datar, cuma bukan Streamlit.<br>Nanti akan mencoba untuk menambahkan bangun ruang di websitenya.</p> -->
+            <p>Ada program Bangun Datar dan Bangun Ruang, namun versi ini bukan Streamlit. Beberapa diantaranya sedang menambahkan beberapa fiturnya, sehingga membuat program ini menjadi lebih lengkap.<br></p>
 			<!-- <p><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</p> -->
+            <!-- <li>Bangun Ruang (Sedang dibuat)</li> -->
 			<ul>
 				<li><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</li>
-				<li>Bangun Ruang (Sedang dibuat)</li>
-				<li>Persamaan (Coming soon)</li>
+                <li><a href="projects/Bangun Ruang.html"></a>Bangun Ruang</li>
+                <li>Persamaan (Coming soon)</li>
                 <li>Grafik (Coming soon)</li>
 			</ul>
         </div><br>
@@ -109,7 +111,7 @@
         <div class="container2">
 			<img src="images/soal-matematika.jpg" width="200">
             <div class="clearfix"></div>
-            <p>Soal Pertanyaan dalam Matematika</p>
+            <p>Soal Pertanyaan dalam Matematika berisi beberapa jenis pertanyaan, yaitu penjumlahan, pengurangan, perkalian, pembagian, dan sebagainya. Lalu ada tingkat kesulitan yang berbeda-beda, dan terdiri dari isian dan pilihan ganda. Selain itu, ada timer untuk setiap soal pada pengaturan.</p>
             <a href="projects/Soal Matematika.html">Soal Matematika</a>
         </div>
         <p class="heading" id="6" style="font-size: 25px"><b>6. Penghitung Waktu</b></p>
@@ -166,9 +168,10 @@
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
+    <!-- Terakhir diupdate: 24 Mei 2024<br> -->
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 24 Mei 2024<br>
+        Terakhir diupdate: 13 Nov 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
