--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -947,13 +947,11 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
             var bs2 = bs.options[bs.selectedIndex];
 
             if (bs2.index == 0) {
-		'''
-		    \documentclass{article}
-				\usepackage{longdivision}
-				\begin{document}
-					\intlongdivision{12345}{13}
-				\end{document}
-		'''
+		// \documentclass{article}
+		// \usepackage{longdivision}
+		// \begin{document}
+		// \intlongdivision{12345}{13}
+		// \end{document}
                 document.getElementById("contoh-bentuk-soal").innerHTML = `
                 <span>
                 Contoh:<br><br>
